src/alto-ui/Table/Table.scss
@import '../scss/inc';

.Table {
  border: 1px solid $coolgrey-20;
  border-radius: $border-radius-default;
  overflow: auto;
  max-width: 100%;
  max-height: 100%;
  background-color: $white;
}

.Table__table {
  border-collapse: collapse;
  table-layout: fixed;
  min-width: 100%;
}

.Table__cell--header {
  font-weight: $font-weight-semibold;
  font-size: $font-size-small;
  position: sticky;
  top: 0;
  background: $white;
  z-index: 2;
  box-shadow: inset 0 -1px 0 0 $coolgrey-20, 0 1px 0 0 $coolgrey-20, inset -1px 0 0 0 $coolgrey-20;

  &:first-child {
    box-shadow: inset 0 -1px 0 0 $coolgrey-20, 0 1px 0 0 $coolgrey-20, inset -1px 0 0 0 $coolgrey-20;
  }

  &:last-child {
    box-shadow: inset 0 -1px 0 0 $coolgrey-20, 0 1px 0 0 $coolgrey-20, inset 0 0 0 0 $coolgrey-20;
  }
}

.Table__cell {
  text-align: left;
  min-width: 6rem;
  max-width: 24rem; // TODO: remove this eventually
  border-bottom: 1px solid $coolgrey-20;

  &--number,
  &--percentage,
  &--int,
  &--integer,
  &--float {
    text-align: right;
  }

  &--boolean,
  &--error {
    text-align: center;
  }

  &--error {
    color: $red;
    font-size: $font-size-large;
  }

  &--formula {
    //font-style: italic;
  }

  &--frozen {
    position: sticky;
    left: 0;
    z-index: 1;
    background: $white;
    box-shadow: inset -2px 0 0 0 $coolgrey-20;

    &.Table__cell--header {
      position: sticky;
      top: 0;
      z-index: 3;
      background: $white;
      box-shadow: inset 0 -1px 0 0 $coolgrey-20, 0 1px 0 0 $coolgrey-20,
        inset -2px 0 0 0 $coolgrey-20;
    }
  }

  &--first {
    background: $coolgrey-10;
    font-weight: $font-weight-semibold;
  }

  &--grouped {
    background-color: $coolgrey-10;
    font-weight: $font-weight-semibold;

    &.Table__cell--frozen {
      box-shadow: unset;
    }
  }
}

.Table__cell--editable {
  padding-top: $spacing-x-small;
  padding-bottom: $spacing-x-small;
}

.Table__cell-container {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  .Table__cell--editable & {
    padding-left: $spacing-x-small;
    padding-right: $spacing-x-small;
  }
}

.Table__cell-content {
  @extend %reset-button;
  width: 100%;
  height: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding: $spacing-x-small 0.625rem;
  min-height: 2rem;
  line-height: $line-height-input;
  overflow: hidden;
  max-width: 100%;
  flex: 1;
  margin: 0;
  border-radius: $border-radius-default;

  .Table--compact & {
    padding: 0.375rem 0.75rem;
  }

  .Table--comfortable & {
    padding: $spacing-medium;
  }

  &--editing {
    display: none;
  }

  &--image,
  &--avatar {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    display: flex;

    .Table--compact & {
      padding-top: 0.2rem;
      padding-bottom: 0.2rem;
    }

    .Table--comfortable & {
      padding-top: 0.5rem;
      padding-bottom: 0.5rem;
    }
  }

  &--image {
    > * {
      margin: auto;
    }
  }

  &--header {
    color: $coolgrey-60;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-right: 0.75rem;
    margin: 0;
    border-radius: 0;
    text-align: left;
    display: flex;
    flex-direction: row;
    align-items: flex-start;

    .Table--compact & {
      padding-top: 0.375rem;
      padding-bottom: 0.375rem;
    }

    .Table--comfortable & {
      padding-top: 0.75rem;
      padding-bottom: 0.75rem;
    }
  }

  &--date {
    min-width: 7rem;
  }

  &--grouped {
    display: flex;
    align-items: center;
  }
}

// --- button ---
.Table__cell-content--editable {
  cursor: pointer;
  position: relative;
  transition: all $transition;
  box-shadow: inset 0 0 0 1px $coolgrey-20;
  //border: 1px solid $coolgrey-20;
  .Table__cell--warning & {
    box-shadow: inset 0 0 0 1px $orange;
  }

  .Table__cell--danger & {
    box-shadow: inset 0 0 0 1px $red;
  }

  &:hover {
    box-shadow: inset 0 0 0 1px $blue-40;
    cursor: pointer;
  }
}

.Table__cell-content--edited {
  font-weight: bold;
  box-shadow: inset 0 0 0 1px $coolgrey-30;
}

.Table__cell-content-icon {
  margin-right: 10px;
  transition: all $transition;
}

.Table__cell-content-icon--collapsed {
  transform: rotate(-90deg);
}

.Table__cell-input {
  display: none;
  margin: 0;

  &--number,
  &--percentage,
  &--int,
  &--integer,
  &--float {
    .textfield {
      text-align: right;
    }
  }

  &--editing {
    display: block;
  }
}

.Table__header-cell-sortable-icons {
  opacity: 0;
  transition: $duration-quick $timing-function opacity;
}

.Table__cell--sortable {
  padding: 0;

  &:hover .Table__header-cell-sortable-icons {
    opacity: 1;
  }
}

.Table__cell--sorted .Table__header-cell-sortable-icons {
  opacity: 1;
}

.Table__cell-button {
  @extend %reset-button;
  transition: all $transition;
  display: flex;
  align-items: center;
  cursor: pointer;

  &:hover {
    background-color: $blue-10;
    box-shadow: inset 0 -1px 0 0 $coolgrey-20, 0 1px 0 0 $coolgrey-20;
  }

  .Table__cell:not(:first-child) &:hover {
    box-shadow: inset 0 -1px 0 0 $coolgrey-20, 0 1px 0 0 $coolgrey-20, inset -1px 0 0 0 $coolgrey-20;
  }
}

.Table__cell-error-icon-wrapper {
  margin-right: $spacing-small;
  width: 1.25rem;
}

.Table__cell-error-icon {
  color: $red;
  margin: 0 $spacing-small;
}

.Table__cell-warning-icon {
  color: $orange;
  margin: 0 $spacing-small;
}

.Table__header-cell-title {
  width: calc(100% - calc(2rem - 12px));
  max-width: calc(100% - calc(2rem - 12px));
  text-overflow: ellipsis;
  overflow: hidden;
  flex: 1 1 auto;

  .Table--compact & {
    width: calc(100% - calc(1.5rem - 12px));
    max-width: calc(100% - calc(1.5rem - 12px));
  }

  .Table__cell--sorted & {
    color: $blue;
  }
}

.Table__header-cell-sortable-icons {
  display: flex;
  flex-direction: column;
  font-size: $font-size-x-small;
  padding-left: 0.5rem;
  line-height: 0;
  flex: 0 0 auto;
}

.Table__header-cell-sortable-icon {
  color: $coolgrey-30;

  &--active {
    color: $blue;
  }
}

.Table__filter-icon {
  margin-right: $spacing-x-small;

  .Table__cell--filtered & {
    color: $blue;
  }
}

.Table__row--collapsed {
  display: none;
}

